<resources>
    <string name="app_name">Hireapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_rentedcar">Rented car</string>
    <string name="menu_myprofile">My profile</string>
    <string name="menu_signout">Sign out</string>
    <string name="menu_contactus">Contact us</string>

</resources>