<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_rentedcar"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/menu_rentedcar" />

        <item
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_myprofile" />

        <item
            android:icon="@drawable/ic_menu_signout"
            android:title="@string/menu_signout" />

        <item
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_contactus" />
    </group>


</menu>
